--- a/adventure/style.css
+++ b/adventure/style.css
@@ -50,6 +50,23 @@ body{
 
 }
 
+@keyframes fadeInFromNone {
+0% {
+    display: none;
+    opacity: 0;
+}
+
+1% {
+    display: block;
+    opacity: 0;
+}
+
+100% {
+    display: block;
+    opacity: 1;
+}
+}
+
 .character{
     width: 110px;
     height:110px;
@@ -57,7 +74,7 @@ body{
 
     position: absolute;
 
-
+    animation: fadeInFromNone 1s ease-out;
 }
 
 .char1{
